<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/imageninicio"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearBotonesMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/categoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorBotonInicio7"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/Categorias"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/recomendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorBotonInicio9"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/recomendacion"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!---<Button
            android:id="@+id/libraryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorBotonInicio2"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/biblioteca"
            android:textSize="16sp"
            android:textStyle="bold" /> -->

        <Button
            android:id="@+id/optionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorBotonInicio5"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/opciones"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/contactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorBotonInicio10"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/contacto"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>